# cann-ge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  blacklist.txt  build.sh  build_third_party.sh  requirements.txt  version.cmake
api/acl/acl_cblas/: CMakeLists.txt
api/acl/acl_model/: CMakeLists.txt
api/acl/acl_op_compiler/: CMakeLists.txt
api/acl/acl_op_executor/: CMakeLists.txt
api/acl/stub/: CMakeLists.txt
api/atc/: CMakeLists.txt  cmd_flag_info.cc  main_impl.cc  omg.cc
api/session/: CMakeLists.txt
api/session/client/: ge_api.cc  ge_api_v2.cc
api/session/jit_execution/: CMakeLists.txt  compile_context.cc  compile_context.h  jit_executor.cc  jit_executor.h  user_graph_ctrl.h  user_graphs_manager.cc
api/session/session/: ge_session_impl.cc  ge_session_impl.h  ge_session_registry.h  inner_session.cc  inner_session.h  session_manager.cc  session_manager.h
api/session/stub/: CMakeLists.txt
base/: CMakeLists.txt
base/common/: file_constant_utils.cc  proto_util.cc  single_op_parser.cc  single_op_parser.h  types.cc
base/common/allocator/: event_allocator.cc  notify_allocator.cc
base/common/b_cast/: b_cast.cc  b_cast.h
base/common/const_place_holder_utils/: const_place_holder_utils.cc  const_place_holder_utils.h
base/common/context/: ctx.cc  properties_manager.cc
base/common/datatype_transfer/: datatype_transfer.cc  datatype_transfer.h
base/common/dump/: dump_manager.cc  dump_op.cc  dump_op.h  exception_dumper.cc  exception_dumper.h
base/common/error_registry/: error_registry.cc
base/common/error_tracking/: error_tracking.cc
base/common/file_constant_utils/: file_constant_utils.cc  file_constant_utils.h
base/common/fp16_t/: fp16_t.cc  fp16_t.h
base/common/helper/: file_saver.cc  mobile_model_helper.cc  model_helper.cc  om2_package_helper.cc  om_file_helper.cc
base/common/kernel_handles_manager/: aicore_kernel_handles_manager.cc  aicore_kernel_handles_manager.h  aicpu_kernel_handles_manager.cc  aicpu_kernel_handles_manager.h  cust_aicpu_kernel_handles_manager.cc  cust_aicpu_kernel_handles_manager.h  kernel_handle_utils.cc  kernel_handle_utils.h  kernel_handles_manager.cc  kernel_handles_manager.h
base/common/math/: hif8_t.h  math_util.h
base/common/memory/: tensor_trans_utils.cc  tensor_trans_utils.h
base/common/model/: executor.h  ge_model.h
base/common/omg_util/: omg_util.cc  omg_util.h
base/common/op/: ge_op_utils.cc
base/common/op_tiling/: op_tiling_rt2.cc
base/common/option_supportion_checker/: option_supportion_checker.cc  option_supportion_checker.h
base/common/platform_info_util/: platform_info_util.cc  platform_info_util.h
base/common/plugin/: datatype_util.cc
base/common/profiling/: global_profiler.cc  profiling_definitions.cc
base/common/proto_util/: proto_util.cc  proto_util.h
base/common/tbe_handle_store/: tbe_handle_store.cc  tbe_handle_store.h
base/common/thread_pool/: thread_pool.cc  thread_pool.h
base/formats/format_transfers/: format_transfer_fractal_zz.cc
base/graph/manager/: graph_external_weight_manager.cc  graph_var_manager.cc
base/host_cpu_engine/: host_cpu_engine.cc
base/slice/: data_slice_adapter.cc
compiler/: CMakeLists.txt
compiler/api/aclgrph/: ge_ir_build.cc  option_utils.cc
compiler/api/gelib/: gelib.cc
compiler/api/generator/: ge_generator.cc
compiler/engines/custom_engine/: custom_graph_optimizer.cc  custom_ops_kernel_builder.cc
compiler/engines/ffts_engine/: CMakeLists.txt
compiler/engines/local_engine/: CMakeLists.txt
compiler/engines/rts_engine/: CMakeLists.txt
compiler/graph/label/: label_maker.cc  label_maker_factory.h
compiler/graph/manager/: graph_context.cc  graph_context.h  graph_manager.cc  graph_manager.h
compiler/graph/optimize/: mem_rw_conflict_optimize.cc  summary_optimize.cc
compiler/graph/partition/: engine_place.cc
compiler/graph/passes/: base_pass.cc  pass_utils.cc
compiler/graph/preprocess/: graph_prepare.cc  graph_prepare.h  multi_batch_copy_graph.cc  multi_batch_options.cc
compiler/host_kernels/: kernel_factory.h  kernel_utils.cc
compiler/host_kernels/array_ops/: broadcast_args_kernel.cc  broadcast_gradient_args_kernel.cc  empty_kernel.cc
compiler/host_kernels/elewise_calculation_ops/: add_kernel.cc  cast_kernel.cc  floormod_kernel.cc  greater_kernel.cc  maximum_kernel.cc  mul_kernel.cc  mul_kernel.h  sub_kernel.cc  sub_kernel.h
compiler/host_kernels/pad_ops/: fill_kernel.cc
compiler/host_kernels/selection_ops/: gather_v2_kernel.cc
compiler/opt_info/: ge_opt_info.cc
dflow/base/: CMakeLists.txt
dflow/base/deploy/: deploy_planner.cc  deploy_planner.h  model_deployer.h
dflow/base/model/: flow_model_om_loader.cc  flow_model_om_saver.cc  flow_model_om_saver.h  model_deploy_resource.h  model_relation.cc  model_relation.h
dflow/compiler/: CMakeLists.txt
dflow/compiler/data_flow_graph/: data_flow_graph.h  data_flow_graph_auto_deployer.h  inner_pp_loader.cc
dflow/compiler/model/: flow_model_builder.cc  flow_model_builder.h  flow_model_cache.cc  flow_model_cache.h  flow_model_helper.cc
dflow/compiler/pne/: process_node_engine_manager.cc
dflow/compiler/session/: dflow_api.cc  dflow_api.h  dflow_session_impl.cc
dflow/deployer/: CMakeLists.txt
dflow/udf/: CMakeLists.txt
graph_metadef/: CMakeLists.txt
graph_metadef/cmake/: build_type.cmake  common_funcs.cmake  intf_pub_linux.cmake  test_funcs.cmake
graph_metadef/exe_graph/: CMakeLists.txt
graph_metadef/graph/: CMakeLists.txt
graph_metadef/proto/: CMakeLists.txt  dump_task.proto  ge_ir.proto
graph_metadef/register/: CMakeLists.txt  auto_mapping_util.h
inc/graph_metadef/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/om2/: CMakeLists.txt  om2_model_executor.cc
runtime/stub/: CMakeLists.txt
runtime/v1/: CMakeLists.txt
runtime/v2/: CMakeLists.txt
tests/: CMakeLists.txt  run_test.sh
tests/acl_ut/: CMakeLists.txt
tests/autofuse/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/cmake/: intf_llt_pub.cmake
tests/engines/: CMakeLists.txt
tests/graph_metadef/: CMakeLists.txt
(+2544 files in other folders)
